[gd_scene load_steps=10 format=2]

[ext_resource path="res://Prefabs/Enemies/Mobs/FlyBombardier/FlyBombardier.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/Enemies/Mobs/Fly/fly.png" type="Texture" id=2]
[ext_resource path="res://Prefabs/Enemies/Mobs/Fly/fly_fly.png" type="Texture" id=3]
[ext_resource path="res://Prefabs/Enemies/Mobs/Fly/fly_hit.png" type="Texture" id=4]
[ext_resource path="res://Prefabs/Enemies/Hazards/Weight/Weight.tscn" type="PackedScene" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "fly",
"speed": 8.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": false,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15.5, 5.5 )

[sub_resource type="RayShape2D" id=4]

[node name="BombardierFly" type="Node2D"]

[node name="Fly" type="KinematicBody2D" parent="."]
collision_layer = 16
collision_mask = 36
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Fly"]
polygon = PoolVector2Array( -9, 19, -7, 21, 3, 19, 10, 16, 16, 6, 12, 2, 24, -15, 14, -20, 4, -5, -8, -8, -17, -20, -26, -14, -15, 1, -18, 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Fly"]
frames = SubResource( 1 )
animation = "death"
frame = 2
playing = true

[node name="AttackBox" type="Area2D" parent="Fly"]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fly/AttackBox"]
position = Vector2( -2, 12 )
shape = SubResource( 2 )

[node name="DieBox" type="Area2D" parent="Fly"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fly/DieBox"]
visible = false
position = Vector2( -2.5, -3.5 )
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Fly"]
visible = false

[node name="WeightRaycast" type="Area2D" parent="Fly"]

[node name="WRayShape" type="CollisionShape2D" parent="Fly/WeightRaycast"]
position = Vector2( -100, 0 )
scale = Vector2( 1, 400 )
shape = SubResource( 4 )

[node name="Weight" parent="." instance=ExtResource( 5 )]
show_behind_parent = true
position = Vector2( 1, 76 )

[connection signal="area_entered" from="Fly/AttackBox" to="Fly" method="_on_AttackBox_area_entered"]
[connection signal="area_entered" from="Fly/DieBox" to="Fly" method="_on_DieBox_area_entered"]
[connection signal="screen_entered" from="Fly/VisibilityNotifier2D" to="Fly" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="Fly/VisibilityNotifier2D" to="Fly" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Fly/WeightRaycast" to="Fly" method="_on_WeightRaycast_area_entered"]
